# citations

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: errors.rs  lib.rs  main.rs  paper.rs  request.rs  scrape.rs
src/test_html/: blocked.html  quantum_theory.html  quantum_theory_citations.html  quantum_theory_cluster.html
