[package]
name = "scholar"
version = "0.1.0"
authors = ["Hidehito Yabuuchi <hdht.ybuc@gmail.com>"]

[[bin]]
name = "scholar"
path = "src/bin/scholar.rs"
# doc = false

[dependencies]
clap = "~2.27.1"
error-chain = "0.11.0"
lazy_static = "0.2.9"
regex = "0.2.2"
reqwest = "0.8.1"
select = "0.4.2"
serde = "1.0.20"
serde_derive = "1.0.20"
serde_json = "1.0.6"
