[package]
name = "scholar"
version = "0.1.0"
authors = ["Hidehito Yabuuchi <hdht.ybuc@gmail.com>"]

[[bin]]
name = "scholar"
path = "src/bin/scholar.rs"
# doc = false

[dependencies]
clap = "2.30.0"
error-chain = "0.11.0"
lazy_static = "1.0.0"
regex = "0.2.6"
reqwest = "0.8.5"
select = "0.4.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
